# renderx

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  capture.sh  descriptor_set_layout.cpp  descriptor_set_layout.hpp  make.sh
include/: defines.hpp
include/containers/: static_map.hpp
include/engine/: renderer.hpp  resource_manager.hpp  shader_library.hpp  types.hpp
include/engine/glfw/: init.hpp  window.hpp
include/engine/vertex/: is_vertex.hpp  position.hpp  rotation.hpp  vertex.hpp
include/engine/vk/: array.hpp  create.hpp  destroy.hpp  format.hpp  functions.hpp  info.hpp  shared.hpp  typedefs.hpp  utils.hpp  vector.hpp
include/engine/vulkan/: buffer.hpp  command_buffer.hpp  command_pool.hpp  (+23 more)
include/renderx/: camera.hpp  hint.hpp  mesh.hpp  object.hpp  os.hpp  renderer.hpp  resource_manager.hpp  running.hpp  shader_library.hpp  surface_formats.hpp  transform.hpp  types.hpp
include/system/: directory.hpp
include/ve/: all.hpp  camera.hpp  config.hpp  exceptions.hpp  heightmap_compute.hpp  hint.hpp  image_loader.hpp  mesh.hpp  mouse_delta.hpp  obj_parser.hpp  object.hpp  os.hpp  renderer.hpp  resource_manager.hpp  running.hpp  shader_library.hpp  singleton.hpp  skybox.hpp  surface_formats.hpp  transform.hpp  types.hpp  uniform_buffer.hpp  wavefront.hpp
includes/: exceptions.hpp  os.hpp  renderer.hpp  shader_library.hpp
includes/engine/: exceptions.hpp  renderer.hpp  resource_manager.hpp  shader_library.hpp
includes/glfw/: glfw_events.hpp  glfw_system.hpp  glfw_window.hpp
includes/templates/: array.hpp
includes/vertex/: basic_vertex.hpp  meta_vertex.hpp
includes/vulkan/: command_buffer.hpp  commands.hpp  overloads.hpp  unique.hpp  vk_create.hpp  vk_destroy.hpp  vk_exception.hpp  vk_functions.hpp  vk_shared.hpp  vk_typedefs.hpp  vk_utils.hpp  vk_vector.hpp  vulkan_command_buffer.hpp  vulkan_command_pool.hpp  vulkan_commandbuffer.hpp  vulkan_device.hpp  vulkan_exception.hpp  vulkan_extension_properties.hpp  vulkan_framebuffer.hpp  vulkan_image_view.hpp  vulkan_instance.hpp  vulkan_logical_device.hpp  vulkan_physical_device.hpp  vulkan_pipeline.hpp  vulkan_pipeline_library.hpp  vulkan_queue.hpp  vulkan_queue_families.hpp  vulkan_render_pass.hpp  vulkan_renderpass.hpp  vulkan_resource.hpp  vulkan_semaphore.hpp  vulkan_shader_module.hpp  vulkan_surface.hpp  vulkan_surface_capabilities.hpp  vulkan_swapchain.hpp  vulkan_vertex_buffer.hpp
shaders/: .gitignore  Makefile  basic.frag.glsl  basic.vert.glsl  make.sh
shaders/hlsl/: make.sh
shaders/include/: curl.glsl  gerstner_wave.glsl  random.glsl  simplex.glsl  simplex.hlsl  voronoise.glsl  wavelet.glsl  worley.glsl
shaders/slang/: make.sh
shaders/sources/: basic.frag.glsl  basic.vert.glsl
slang/: .gitignore  make.sh
slang/include/: lighting.sl
slang/sources/: planet_domain.sl  planet_fragment.sl  planet_hull.sl  planet_vertex.sl  vertex_main.sl
sources/: camera.cpp  main.cpp  pipeline_library.cpp  renderer.cpp  shader_library.cpp  vulkan_pipeline_library.cpp
sources/camera/: projection.cpp
sources/glfw/: glfw_system.cpp  glfw_window.cpp  system.cpp  window.cpp
sources/sdl/: system.cpp  window.cpp
sources/structures/: vector2.cpp  vector3.cpp
sources/system/: closeable.cpp
sources/vk/: exception.cpp
sources/vulkan/: buffer.cpp  command_buffer.cpp  command_pool.cpp  debug_utils_messenger.cpp  device.cpp  device_memory.cpp  fence.cpp  framebuffers.cpp  image.cpp  image_view.cpp  image_views.cpp  images.cpp  instance.cpp  physical_device.cpp  pipeline.cpp  queue.cpp  render_pass.cpp  semaphore.cpp  surface.cpp  swapchain.cpp  swapchain_manager.cpp  vertex_buffer.cpp  vk_exception.cpp  vulkan_command_buffer.cpp  vulkan_command_pool.cpp  vulkan_device.cpp  vulkan_extension_properties.cpp  vulkan_framebuffer.cpp  vulkan_image_view.cpp  vulkan_instance.cpp  vulkan_logical_device.cpp  vulkan_physical_device.cpp  vulkan_pipeline.cpp  vulkan_queue.cpp  vulkan_queue_families.cpp  vulkan_render_pass.cpp  vulkan_renderpass.cpp  vulkan_semaphore.cpp  vulkan_shader_module.cpp  vulkan_surface.cpp  (+3 more)
test/: Makefile  main.cpp
tools/: Makefile  builder.mk  builder.sh  generate_cdb.js  glfw.env  glfw.mk  glm.mk  install_glfw.sh  install_glm.sh  install_sdl.sh  install_xns.sh
(+269 files in other folders)
